--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "license": "ISC",
   "author": "Sougata Ghar",
   "type": "commonjs",
-  "main": "api.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "build:css": "npx @tailwindcss/cli -i ./public/styles/input.css -o ./public/styles/output.css"
   },
   "dependencies": {
