--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.87.1",
     "daisyui": "^5.5.14",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "multer": "^2.0.2",
     "postgres": "^3.4.7"
   }
